jilles      2006/08/20 13:22:45 UTC	(20060820-6163)
  Log:
  Only show IPs with >= 4 clients in clones list.
  

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/clones.c (File Modified) 


jilles      2006/08/20 00:19:27 UTC	(20060820-6161)
  Log:
  regex_extract():
  - fix backslash handling like it should be (e.g. accept /\//)
  - be more strict in what to allow after the RE (e.g. deny /aaa/.)
  

  Changes:	Modified:
  +6 -3		trunk/src/match.c (File Modified) 


jilles      2006/08/19 23:27:19 UTC	(20060819-6159)
  Log:
  Change syntax for operserv rmatch and rakill, to cope
  with regular expressions and reasons both containing
  spaces.
  This uses a new function in match.c
  char *regex_extract(char *pattern, char **pend, int *pflags);
  returns the extracted RE (overwriting a character in pattern
  with '\0')
  

  Changes:	Modified:
  +5 -7		trunk/help/oservice/rakill (File Modified) 
  +9 -6		trunk/help/oservice/rmatch (File Modified) 
  +1 -0		trunk/include/match.h (File Modified) 
  +42 -16	trunk/modules/operserv/rakill.c (File Modified) 
  +10 -8	trunk/modules/operserv/rmatch.c (File Modified) 
  +30 -0	trunk/src/match.c (File Modified) 


jilles      2006/08/19 22:05:04 UTC	(20060819-6157)
  Log:
  operserv rakill:
  - fix function name
  - change priv from general:admin to operserv:massakill
  - send the snoop before adding any klines
  - fix destination server argument to kline_sts()
  

  Changes:	Modified:
  +5 -4		trunk/modules/operserv/rakill.c (File Modified) 


jilles      2006/08/19 21:53:45 UTC	(20060819-6155)
  Log:
  Make all hashtable sizes for dictionary #defines in common.h.
  

  Changes:	Modified:
  +4 -0		trunk/include/common.h (File Modified) 
  +1 -1		trunk/modules/operserv/clones.c (File Modified) 
  +1 -1		trunk/src/ctcp-common.c (File Modified) 
  +1 -5		trunk/src/node.c (File Modified) 
  +1 -1		trunk/src/servtree.c (File Modified) 


jilles      2006/08/19 21:46:12 UTC	(20060819-6153)
  Log: